# EyeGesturesLite

./: .gitignore  Makefile  README.md  calibration.js  example.html  eyegestures.css  eyegestures.js  eyegestures.min.js  index.js  npm_test.js  package-lock.json  package.json  simple.html
demo/: eyekey.html
engine/: Cargo.toml
engine/src/: calibrator.rs  eyegestures.rs  lib.rs  python.rs  wasm.rs
example/: simple.html  simple_wasm.html
rust_eyegestures/: Cargo.toml  calibrator.rs  example.rs  fixation.rs  lib.rs
rust_eyegestures/src/: calibrator.rs  eyegestures.rs  fixation.rs  lib.rs
src/: calibration.js  eyegestures.js  eyegestures.min.js
